--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url('https://i.imgur.com/b9r5sEL.jpg') bottom center;
+  background: url('https://phish.com/wp-content/uploads/2015/09/nyestuff.jpg') bottom center;
   background-size: cover;
 }
 
